--- a/index.html
+++ b/index.html
@@ -32,32 +32,266 @@
 
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link active"></a>Home
+              <a href="#home" class="nav__link active">Home</a>
             </li>
             <li class="nav__item">
-              <a href="#about" class="nav__link"></a>About
+              <a href="#about" class="nav__link">About</a>
             </li>
             <li class="nav__item">
-              <a href="#skills" class="nav__link"></a>Skills
+              <a href="#skills" class="nav__link">Skills</a>
             </li>
             <li class="nav__item">
-              <a href="#services" class="nav__link"></a>Services
+              <a href="#services" class="nav__link">Services</a>
             </li>
             <li class="nav__item">
-              <a href="#works" class="nav__link"></a>Works
+              <a href="#works" class="nav__link">Works</a>
             </li>
             <li class="nav__item">
-              <a href="#contact" class="nav__link"></a>Contact Me
+              <a href="#contact" class="nav__link">Contact Me</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <main class="l-main">...</main>
+    <main class="l-main">
+      <!--  HOME  -->
 
-    <!--- **** FOOTER****** --->
+      <section class="home" id="home">
+        <div class="home__container bd-grid">
+          <div class="home__data">
+            <div class="home__img">
+              <img src="assets/img/profile2.jpeg" alt="" />
+            </div>
+            <h1 class="home__title">João Pereira</h1>
+            <span class="home__profession">Junior FullStack Developer</span>
 
+            <div class="home__social">
+              <a href="#" class="home__social-link"
+                ><i class="bx bxl-linkedin-square"></i
+              ></a>
+              <a href="#" class="home__social-link"
+                ><i class="bx bxl-github"></i
+              ></a>
+              <a href="#" class="home__social-link"
+                ><i class="bx bxl-facebook-square"></i
+              ></a>
+              <a href="#" class="home__social-link"
+                ><i class="bx bxl-instagram"></i
+              ></a>
+            </div>
+            <a download="" href="#" class="button home__button"
+              >Download my CV</a
+            >
+          </div>
+        </div>
+      </section>
+
+      <!--   ABOUT   -->
+
+      <section class="about section" id="about">
+        <span class="section-subtitle">My intro</span>
+        <h2 class="section-title">About Me</h2>
+
+        <div class="about__container bd-grid">
+          <div class="about__data">
+            <p class="about__description">bla bla bla iahia ia iao ia</p>
+            <img src="assets/img/about.png" alt="" class="about__img" />
+          </div>
+
+          <div>
+            <div class="about__information">
+              <h3 class="about__information-title">Information</h3>
+
+              <div class="about__information-data">
+                <i class="bx bx-user about__information-icon"></i>
+                <span>João Pereira</span>
+              </div>
+
+              <div class="about__information-data">
+                <i class="bx bx-phone about__information-icon"></i>
+                <span>+351 913439919</span>
+              </div>
+
+              <div class="about__information-data">
+                <i class="bx bx-envelope about__information-icon"></i>
+                <span>pereira.joaocl@gmail.com</span>
+              </div>
+            </div>
+
+            <div class="about__information">
+              <h3 class="about__information-title">Experience</h3>
+
+              <div class="about__information-data">
+                <i class="bx bx-medal about__information-icon"></i>
+                <div>
+                  <span class="about__information-subtitle">5 years job</span>
+                  <span class="about__information-subtitle-small"
+                    >experience</span
+                  >
+                </div>
+              </div>
+
+              <div class="about__information-data">
+                <i class="bx bx-briefcase about__information-icon"></i>
+                <div>
+                  <span class="about__information-subtitle">50+ projects</span>
+                  <span class="about__information-subtitle-small"
+                    >completed</span
+                  >
+                </div>
+              </div>
+
+              <div class="about__information-data">
+                <i class="bx bx-support about__information-icon"></i>
+                <div>
+                  <span class="about__information-subtitle">Support</span>
+                  <span class="about__information-subtitle-small">Online</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--   SKILLS    -->
+
+      <section class="skills section" id="skills">
+        <span class="section-subtitle">Why choose me</span>
+        <h2 class="section-title">My experience area</h2>
+
+        <div class="skills__container bd-grid">
+          <div class="skills__content">
+            <h3 class="skills__subtitle">Frontend</h3>
+
+            <div class="skills__data">
+              <span class="skills__name">Html/css</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__html"></span>
+            </div>
+
+            <div class="skills__data">
+              <span class="skills__name">JavaScript</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__js"></span>
+            </div>
+
+            <div class="skills__data">
+              <span class="skills__name">React</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__react"></span>
+            </div>
+
+            <div class="skills__data">
+              <span class="skills__name">Angular</span>
+              <span class="skills__number">20%</span>
+              <span class="skills__bar skills__angular"></span>
+            </div>
+          </div>
+        </div>
+        <div class="skills__container bd-grid">
+          <div class="skills__content">
+            <h3 class="skills__subtitle">Backend</h3>
+
+            <div class="skills__data">
+              <span class="skills__name">php</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__php"></span>
+            </div>
+
+            <div class="skills__data">
+              <span class="skills__name">node js</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__node"></span>
+            </div>
+
+            <div class="skills__data">
+              <span class="skills__name">Firebase</span>
+              <span class="skills__number">80%</span>
+              <span class="skills__bar skills__firebase"></span>
+            </div>
+
+            <div class="skills__data">
+              <span class="skills__name">Python</span>
+              <span class="skills__number">20%</span>
+              <span class="skills__bar skills__python"></span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--  EDUCATION  -->
+
+      <section class="education section">
+        <span class="section-subtitle">Education</span>
+        <h2 class="section-title">My education</h2>
+
+        <div class="education__container bd-grid">
+          <div class="education__content">
+            <div>
+              <h3 class="education__year">2000</h3>
+              <span class="education__university">UTAD</span>
+            </div>
+            <div class="education__time">
+              <span class="education__rounder"></span>
+              <span class="education__line"></span>
+            </div>
+
+            <div>
+              <h3 class="education__race">Diploma</h3>
+              <span class="education__specialty">frontend</span>
+            </div>
+          </div>
+
+          <div class="education__content">
+            <div>
+              <h3 class="education__year">2023</h3>
+              <span class="education__university">Academia</span>
+            </div>
+            <div class="education__time">
+              <span class="education__rounder"></span>
+              <span class="education__line"></span>
+            </div>
+
+            <div>
+              <h3 class="education__race">bootcamp</h3>
+              <span class="education__specialty">FullStack</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--   SERVICES   -->
+
+      <section class="services section" id="services">
+        <span class="section-subtitle">What I offer</span>
+        <h2 class="section-title">My services</h2>
+
+        <div class="services__container bd-grid">
+          <!--  make more services , past this  -->
+          <div class="services__content">
+            <i class="bx bx-code services__icon"></i>
+            <h3 class="services__title">Web design</h3>
+            <p class="services__description">i do this and that</p>
+          </div>
+        </div>
+      </section>
+
+      <!--- **** PROJECTS ***** --->
+      <section class="project section">
+        <div class="project__container bd-grid">
+          <div class="project__data">
+            <h2 class="section-title project__title">First Project</h2>
+            <p class="project__description">EU fiz isto e aquilo mas pqp</p>
+            <a href="#contact" class="button button__light"> Contact Me </a>
+          </div>
+
+          <img src="assets/img/battleShip.jpg" alt="" class="project__img" />
+        </div>
+      </section>
+
+      <!--- **** FOOTER****** --->
+    </main>
     <!--*** MAIN JS ****-->
     <script src="assets/js/main.js"></script>
   </body>
