Template almost done.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="about__container bd-grid">
           <div class="about__data">
-            <p class="about__description">bla bla bla iahia ia iao ia</p>
+            <p class="about__description">bla bbla bla bla iahia ia iao iabla bla bla iahia ia iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iabla bla bla iahia ia iao iala bla iahia ia iao ia</p>
             <img src="assets/img/about.png" alt="" class="about__img" />
           </div>
 
@@ -188,8 +188,8 @@
               <span class="skills__bar skills__angular"></span>
             </div>
           </div>
-        </div>
-        <div class="skills__container bd-grid">
+        
+        
           <div class="skills__content">
             <h3 class="skills__subtitle">Backend</h3>
 
@@ -217,6 +217,7 @@
               <span class="skills__bar skills__python"></span>
             </div>
           </div>
+        </div>
         </div>
       </section>
 
@@ -274,6 +275,12 @@
             <h3 class="services__title">Web design</h3>
             <p class="services__description">i do this and that</p>
           </div>
+
+          <div class="services__content">
+            <i class="bx bx-code services__icon"></i>
+            <h3 class="services__title">Backend</h3>
+            <p class="services__description">i do this and that</p>
+          </div>
         </div>
       </section>
 
@@ -290,8 +297,128 @@
         </div>
       </section>
 
+      <!--- **** WORK  ****** --->
+
+      <section class="works section" id="works">
+        <span class="section-subtitle">My portfolio</span>
+        <h2 class="section-title">Recent works</h2>
+
+        <div class="works__container bd-grid">
+          <div class="works__img">
+            <img src="assets/img/battleShip.jpg" alt="" />
+            <div class="works__data">
+              <a href="#" class="works__link"><i class="bx bx-link"></i></a>
+              <span class="works__title">Work 1</span>
+            </div>
+          </div>
+
+          <div class="works__img">
+            <img src="assets/img/battleShip.jpg" alt="" />
+            <div class="works__data">
+              <a href="#" class="works__link"><i class="bx bx-link"></i></a>
+              <span class="works__title">Work 2</span>
+            </div>
+          </div>
+
+          <div class="works__img">
+            <img src="assets/img/battleShip.jpg" alt="" />
+            <div class="works__data">
+              <a href="#" class="works__link"><i class="bx bx-link"></i></a>
+              <span class="works__title">Work 3</span>
+            </div>
+          </div>
+
+          <div class="works__img">
+            <img src="assets/img/battleShip.jpg" alt="" />
+            <div class="works__data">
+              <a href="#" class="works__link"><i class="bx bx-link"></i></a>
+              <span class="works__title">Work 4</span>
+            </div>
+          </div>
+
+          <div class="works__img">
+            <img src="assets/img/battleShip.jpg" alt="" />
+            <div class="works__data">
+              <a href="#" class="works__link"><i class="bx bx-link"></i></a>
+              <span class="works__title">Work 5</span>
+            </div>
+          </div>
+
+          <div class="works__img">
+            <img src="assets/img/battleShip.jpg" alt="" />
+            <div class="works__data">
+              <a href="#" class="works__link"><i class="bx bx-link"></i></a>
+              <span class="works__title">Work 6</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--- **** CONTACT****** --->
+
+      <section class="contact section" id="contact">
+        <span class="section-subtitle">Contact Me</span>
+        <h2 class="section-title">Get in touch</h2>
+
+        <div class="contact__container bd-grid">
+          <form action="" class="contact__form">
+            <div class="contact__inputs">
+              <input type="text" placeholder="Name" class="contact__input" />
+              <input type="mail" placeholder="Email" class="contact__input" />
+            </div>
+            <input type="text" placeholder="Project" class="contact__input" />
+            <textarea
+              name=""
+              id=""
+              cols="0"
+              rows="10"
+              placeholder="Message"
+              class="contact__input"
+            ></textarea>
+            <input
+              type="submit"
+              value="Send Message"
+              class="button contact__button"
+            />
+          </form>
+          <div>
+            <div class="contact__info">
+              <h3 class="contact__subtitle">Call me</h3>
+              <span class="contact__text">99929323</span>
+              <span class="contact__text">99929323</span>
+            </div>
+
+            <div class="contact__info">
+              <h3 class="contact__subtitle">Email</h3>
+              <span class="contact__text">ratz@poisfas </span>
+              <span class="contact__text">99929323</span>
+            </div>
+
+            <div class="contact__info">
+              <h3 class="contact__subtitle">Location</h3>
+              <span class="contact__text">crl da bila</span>
+              <span class="contact__text">terceira</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!--- **** FOOTER****** --->
     </main>
+    <footer class="footer section">
+      <div class="footer__container bd-grid">
+        <h1 class="footer__title">João</h1>
+        <p class="footer__description">I am João and this is my website</p>
+
+        <div class="footer__social">
+          <a href="" class="footer__link"><i class="bx bxl-linkedin"></i></a>
+          <a href="" class="footer__link"><i class="bx bxl-facebook"></i></a>
+          <a href="" class="footer__link"><i class="bx bxl-instagram"></i></a>
+        </div>
+        <p class="footer__copy">All rights reserved</p>
+      </div>
+    </footer>
+
     <!--*** MAIN JS ****-->
     <script src="assets/js/main.js"></script>
   </body>
