--- a/index.html
+++ b/index.html
@@ -41,22 +41,34 @@
 
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link active">Home</a>
+              <a href="#home" class="nav__link active"
+                ><i class="fas fa-home"></i>&ensp; Home</a
+              >
             </li>
             <li class="nav__item">
-              <a href="#about" class="nav__link">About</a>
+              <a href="#about" class="nav__link">
+                <i class="far fa-user"></i>&ensp; About</a
+              >
             </li>
             <li class="nav__item">
-              <a href="#skills" class="nav__link">Technologies</a>
+              <a href="#skills" class="nav__link"
+                ><i class="fas fa-tools"></i>&ensp; Technologies</a
+              >
             </li>
             <li class="nav__item">
-              <a href="#learning" class="nav__link">Learning</a>
+              <a href="#learning" class="nav__link"
+                ><i class="far fa-lightbulb"></i> &ensp; Learning</a
+              >
             </li>
             <li class="nav__item">
-              <a href="#works" class="nav__link">Works</a>
+              <a href="#works" class="nav__link"
+                ><i class="fas fa-book"></i> &ensp; Works</a
+              >
             </li>
             <li class="nav__item">
-              <a href="#contact" class="nav__link">Contact Me</a>
+              <a href="#contact" class="nav__link"
+                ><i class="far fa-address-book"></i> &ensp;Contact Me</a
+              >
             </li>
           </ul>
         </div>
@@ -103,7 +115,7 @@
             </div>
             <a
               download=""
-              href="https://drive.google.com/uc?export=download&id=1b6IYJryraLWx2YHJRdKheZTU5zm6oeUM"
+              href="https://drive.google.com/uc?export=download&id=1_C-cAWmjh3ypFYS4GAa2AE0SMaMdxkfY"
               class="button home__button"
               >Download my CV</a
             >
@@ -367,7 +379,7 @@
             </div>
           </div>
           <div class="works__img">
-            <img src="assets/img/chatapp3.jpg" alt="" />
+            <img src="assets/img/chatapp4.jpg" alt="" />
             <div class="works__data">
               <a
                 href="https://github.com/ratzPereira/chat-app"
