Changed photos and colors

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="home__container bd-grid">
           <div class="home__data">
             <div class="home__img">
-              <img src="assets/img/profile4.png" alt="" />
+              <img src="assets/img/perfil2.png" alt="" />
             </div>
             <h1 class="home__title">João Pereira</h1>
             <span class="home__profession">Junior FullStack Developer</span>
@@ -314,7 +314,7 @@
           <!--  make more services , past this  -->
           <div class="services__content">
             <i class="bx bxl-spring-boot services__icon"></i>
-            <h3 class="services__title"></h3>
+            <h3 class="services__title">Java</h3>
             <p class="services__description">
               Spring-framework 5, beginner to guru - Udemy
             </p>
@@ -400,7 +400,7 @@
           <div class="works__img">
             <img src="assets/img/taskmanager.jpg" alt="" />
             <div class="works__data">
-              ><a
+              <a
                 href="https://github.com/ratzPereira/task-manager"
                 target="_blank"
                 class="works__link"
