--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </p>
 
             <p class="about__description">
-              Am I or am I not the perfect colleague to have around?I might
+              Am I or am I not the perfect colleague to have around? I might
               sound full of myself, like I’m “the last cookie in the jar”, but I
               dare you to contact me, and check it out for yourself!
             </p>
@@ -337,8 +337,8 @@
           <div class="project__data">
             <h2 class="section-title project__title">Currently Learning</h2>
             <p class="project__description">
-              Currently learning &nbsp; <i class="fab fa-react"></i> React,
-              Redux and MondoDB by doing one course in Udemy - "Mern eCommerce"
+              <i class="fab fa-react"></i> React, Redux and MondoDB by doing one
+              course in Udemy - "Mern eCommerce"
             </p>
           </div>
 
