--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
             <li class="nav__item">
               <a href="#works" class="nav__link"
-                ><i class="fas fa-book"></i> &ensp; Works</a
+                ><i class="fas fa-book"></i> &ensp; Projects</a
               >
             </li>
             <li class="nav__item">
