updated with new projects

--- a/index.html
+++ b/index.html
@@ -448,6 +448,33 @@
               <span class="works__title">E-commerce MERN app</span>
             </div>
           </div>
+
+          <div class="works__img">
+            <img src="assets/img/javaangular.jpg" alt="" />
+            <div class="works__data">
+              <a
+                href="https://github.com/ratzPereira/angular-java-ecommerce"
+                target="_blank"
+                class="works__link"
+                ><i class="bx bxl-github"></i
+              ></a>
+
+              <span class="works__title">Angular, Java eCommerce</span>
+            </div>
+          </div>
+
+          <div class="works__img">
+            <img src="assets/img/android.jpg" alt="" />
+            <div class="works__data">
+              <a
+                href="https://github.com/ratzPereira/RockPaperScizorsGame"
+                target="_blank"
+                class="works__link"
+                ><i class="bx bxl-github"></i
+              ></a>
+              <span class="works__title">First Android Game</span>
+            </div>
+          </div>
         </div>
       </section>
 
