--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
             <a
               download=""
-              href="https://drive.google.com/uc?export=download&id=1b6IYJryraLWx2YHJRdKheZTU5zm6oeUM"
+              href="https://drive.google.com/file/d/1b6IYJryraLWx2YHJRdKheZTU5zm6oeUM/view?usp=sharing"
               class="button home__button"
               >Download my CV</a
             >
